--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Gamers Store</title>
+</head>
+<body>
+
+<h1>Bem-vindos a Melhor Loja de Periféricos Gamers</h1>
+<p> Nós criamos essa loja por entendermos como a maioria dos gamers se sentem, por não terem os melhores acessórios para jogar, e por causa disso criamos essa loja com os melhores preços</p>
+
+<p>A nossa empresa se baseia principalmente em uma boa relação com nossos clientes.</p>
+
+</body>
+</html>
 
