--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+<title>Electrowatts</title>
+</head>
+<body style="background-color:lightgray;">
+
+<h1 style="font-size:50px;" style="font-family:arial;">Electrowatts</h1>
+<p>Nós somos uma empresa revolucionária na área da tecnologia, nos especializamos em eletrodomésticos que têm o objetivo de melhorar o dia a dia e a qualidade de vida das pessoas.</p>
+
+<p>Venha conhecer o mais novo protótipo de nossa empresa, ele consiste basicamente em um umidificador que automaticamente se liga quando o ar está seco</p>
+
+</body>
+</html>
+
+<p style="color:Tomato;">Aqui eu gostaria de lhes fazer uma breve introdução a toda nossa história, bem a empresa Electrowatts foi fundada mais ou menos em 2010, quando dois amigos após se formarem no colégio queriam revolucionar o mundo da ciência e tecnologia, seus nomes Matheus Guion e Gabriel Boso, os dois revolucionaram o mercado e a forma como as coisas são feitas, e ao mesmo tempo mantendo sua filosofia de ser uma empresa que faria seus produtos com qualidade e custo baixo, dessa forma empilhando fãs ao redor do mundo, atualmente a empresa atende diversos lugares tanto do Brasil quanto do mundo, e uma de suas maiores diferenças para o resto do mercado, é ter apenas uma loja física que fica na cidade de Sp e o resto do seu atendimento é de forma online.</p>
+
+<p>Vamos conhecer um pouco sobre nossos dois principais chefes no caso os criados: Podemos começar com Matheus podemos dizer que ele é a figura pública da empresa, ele é a pessoa que representa a empresa na mídia, nascido em São Paulo, atualmente tem 29 anos, nascido em 21 de Novembro de 1992, atualmente ele é solteiro.</p>
