--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body style="background-color:lightgray;">
 
 <h1 style="font-size:50px;" style="font-family:arial;">Electrowatts</h1>
-<title>Quem é Electrowatts?</title>
+<h2>Quem é Electrowatts?</h2>
   <p>Nós somos uma empresa revolucionária na área da tecnologia, nos especializamos em eletrodomésticos que têm o objetivo de melhorar o dia a dia e a qualidade de vida das pessoas.</p>
 
 <p>Venha conhecer o mais novo protótipo de nossa empresa, ele consiste basicamente em um umidificador que automaticamente se liga quando o ar está seco</p>
