--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>Electrowatts</title>
-<p><a href="Introdução">Introdução</a></p>
+<p><a href="#Introdução">Introdução</a></p>
   </head>
 <body style="background-color:lightgray;">
 
