--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
 </body>
 </html>
- <h2 id="#História">A história da empresa</h2> 
+ <h2 id="História">A história da empresa</h2> 
 <p style="color:Tomato;">Aqui eu gostaria de lhes fazer uma breve introdução a toda nossa história, bem a empresa Electrowatts foi fundada mais ou menos em 2010, quando dois amigos após se formarem no colégio queriam revolucionar o mundo da ciência e tecnologia, seus nomes Matheus Guion e Gabriel Boso, os dois revolucionaram o mercado e a forma como as coisas são feitas, e ao mesmo tempo mantendo sua filosofia de ser uma empresa que faria seus produtos com qualidade e custo baixo, dessa forma empilhando fãs ao redor do mundo, atualmente a empresa atende diversos lugares tanto do Brasil quanto do mundo, e uma de suas maiores diferenças para o resto do mercado, é ter apenas uma loja física que fica na cidade de Sp e o resto do seu atendimento é de forma online.</p>
- <h2 id="#Fundadores">Fundadores da empresa</h2> 
+ <h2 id="Fundadores">Fundadores da empresa</h2> 
 <p>Vamos conhecer um pouco sobre nossos dois principais fundadores: Podemos começar com Matheus podemos dizer que ele é a figura pública da empresa, ele é a pessoa que representa a empresa na mídia, nascido em São Paulo, atualmente tem 29 anos, nascido em 21 de Novembro de 1992, atualmente ele é solteiro. Nosso segundo fundador é Gabriel, basicamente é ele que bota a mão na massa, ele trabalha diretamente no projeto desenvolvendo os modelos 3d, idealizando etc. também nascido em São Paulo, atualmente tem 28 anos, nascido em 27 de Março de 1994, ele também se encontra solteiro</p>
- <h2 id="#Contatos">Contatos da empresa</h2> 
+ <h2 id="Contatos">Contatos da empresa</h2> 
 
 <a href="https://discord.gg/wKmvpJrv/" target="_blank">Nosso servidor no discord</a>
 <p> Nosso endereço de email: electrowattscontato@gmail.com
-  Nosso número de telefone: +55 11 99771-4835
+  Nosso número de telefone: +55 11 99771-4835 <p>
