--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <p><a href="#História">História</a></p>
   <p><a href="#Fundadores">Fundadores</a></p>
   <p><a href="#Contatos">Contatos</a></p>
+  <p><a href="#Produto">Produto</a></p>
   </head>
 <body style="background-color:lightgray;">
 
@@ -24,6 +25,8 @@
 <p>Vamos conhecer um pouco sobre nossos dois principais fundadores: Podemos começar com Matheus podemos dizer que ele é a figura pública da empresa, ele é a pessoa que representa a empresa na mídia, nascido em São Paulo, atualmente tem 29 anos, nascido em 21 de Novembro de 1992, atualmente ele é solteiro. Nosso segundo fundador é Gabriel, basicamente é ele que bota a mão na massa, ele trabalha diretamente no projeto desenvolvendo os modelos 3d, idealizando etc. também nascido em São Paulo, atualmente tem 28 anos, nascido em 27 de Março de 1994, ele também se encontra solteiro</p>
  <h2 id="Contatos">Contatos da empresa</h2> 
 
-<a href="https://discord.gg/wKmvpJrv/" target="_blank">Nosso servidor no discord</a>
+<a href="https://discord.gg/Ds7p3MF4Nn" target="_blank">Nosso servidor no discord</a>
 <p> Nosso endereço de email: electrowattscontato@gmail.com
   Nosso número de telefone: +55 11 99771-4835 <p>
+<h2 id="Produto">Nosso produto</h2> 
+<p> Nosso produto é um umidificador de ar que liga automaticamente de acordo com a umidade do ar, ou seja, quando o ar está seco o umidificador liga automatcamente. O produto é um umidificador de ar a vapor, ele ferve a água e libera o vapor no ar, o aparelho será equipado com um Sensor de Umidade e Temperatura DHT11 esse sensor será conectado a um arduino, que ligará o aparelho quando a umidade do ar estiver muito baixa.<p>
