--- a/index.html
+++ b/index.html
@@ -31,3 +31,4 @@
 <p> Nosso produto é um umidificador de ar que liga automaticamente de acordo com a umidade do ar, ou seja, quando o ar está seco o umidificador liga automatcamente. O produto é um umidificador de ar a vapor, ele ferve a água e libera o vapor no ar, o aparelho será equipado com um Sensor de Umidade e Temperatura DHT11 esse sensor será conectado a um arduino, que ligará o aparelho quando a umidade do ar estiver muito baixa.<p>
 <img src="imagens bagulho 3d 1.png" alt="3d 1" width="250" height="333"> 
   <img src="imagens bagulho 3d 2.png" alt="3d 2" width="250" height="333">
+<p> O projeto ainda está em suas primeiras versões e precisa de muito trabalho , porém as imgens dão uma boa ideia de como o produto será externamente. <p>
