--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
  <h2 id="Contatos">Contatos da empresa</h2> 
 
 <a href="https://www.discord.gg/Ds7p3MF4Nn" target="_blank">Nosso servidor no discord</a>
-<p><a href="mailto:electrowattscontato@gmail.com">Send email</a></p>
+<p><a href="mailto:electrowattscontato@gmail.com">Mandar email</a></p>
   <p>Nosso número de telefone: +55 11 99771-4835 <p>
 <h2 id="Produto">Nosso produto</h2> 
 <p> Nosso produto é um umidificador de ar que liga automaticamente de acordo com a umidade do ar, ou seja, quando o ar está seco o umidificador liga automatcamente. O produto é um umidificador de ar a vapor, ele ferve a água e libera o vapor no ar, o aparelho será equipado com um Sensor de Umidade e Temperatura DHT11 esse sensor será conectado a um arduino, que ligará o aparelho quando a umidade do ar estiver muito baixa.<p>
